More file path improvements, mostly around pipeline jobs